@@ -1,5 +1,6 @@
 package Server.GameLogic;
 
+import java.io.PrintStream;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -8,35 +9,49 @@ public class Room {
     private final int maxPlayers;
     private String creator;
     private final List<String> players = new ArrayList<>();
+    private final List<PrintStream> playerStreams = new ArrayList<>();  // Players stream lists
 
     public Room(String id, int maxPlayers, String creator) {
         this.id = id;
         this.maxPlayers = maxPlayers;
         this.creator = creator;
         players.add(creator); // Creator joins automatically
+        //<WARNING> Add the creator PrintStream???
     }
 
     public String getId() {
         return id;
     }
 
+    public List<String> getPlayers() {
+        return players;
+    }
+
+    public List<PrintStream> getPlayerStreams() {
+        return playerStreams;
+    }
+
+    public void addPlayer(String playerName, PrintStream playerStream) {
+        if (!isFull()) {
+            players.add(playerName);
+            playerStreams.add(playerStream);  // Save player PrintStream
+        }
+    }
+
     public boolean isFull() {
         return players.size() >= maxPlayers;
     }
 
-    public void addPlayer(String playerName) {
-        if (!isFull()) {
-            players.add(playerName);
-        }
+    public boolean isReadyToStart() {
+        return isFull();
     }
 
     public void removePlayer(String playerName){
         players.remove(playerName);
-        
+        //<WARNING> remove player PrintStream
         if(playerName.equalsIgnoreCase(creator)){
-            
             try{
-                creator = players.get(0);
+                creator = players.getFirst();
             }catch(IndexOutOfBoundsException e){
                 e.printStackTrace();
                 creator = null;
@@ -44,13 +59,5 @@ public class Room {
             
         }
         
-    }
-
-    public List<String> getPlayers() {
-        return players;
-    }
-
-    public boolean isReadyToStart() {
-        return isFull();
     }
 }
